@@ -80,7 +80,7 @@ CONFIG = {
     # number. 1 means normal speed, > 1 meens higher speed of game objects.
     'game speed' => 1,
 
-    # Milliseconds to sleep in every frame (use this if freeVikings
+    # Seconds to sleep in every frame (set cca 0.010 if freeVikings
     # have fps higher then 20 and vikings move suspiciously slowly)
     'frame delay' => 0,
 
